horizontal scroll fixed

--- a/src/components/Gallery/gallery.scss
+++ b/src/components/Gallery/gallery.scss
@@ -82,6 +82,13 @@
         display: grid;
         grid-template-columns: 20vw 1fr 200px;
         width: 100vw;
+
+        &.is-reveal{
+            .rd-gallery--item-image{
+                transform: scale(1);
+                filter: none;
+            }
+        }
     }
 
     .rd-gallery--item-image{
@@ -91,7 +98,8 @@
         width: 100%;
         height: 100%;
         will-change: transform;
-        transform: scale(1);
-
+        transform: scale(.7);
+        transition: all 1.5s cubic-bezier(.77,0,.175,1);
+        filter: grayscale(100%) sepia(20%) brightness(80%);
     }
 }
