--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -573,6 +573,10 @@ body{
   font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+main{
+    overflow: hidden!important;
+}
+
 section{
   padding: 100px 0;
   .rd-seaction--header{
